@@ -1414,6 +1414,23 @@ device_erase (Device * self)
 }
 
 gboolean
+device_eject (Device * self)
+{
+    DeviceClass *klass;
+
+    g_assert(IS_DEVICE (self));
+    g_assert(self->access_mode == ACCESS_NULL);
+    g_assert(!self->in_file);
+
+    klass = DEVICE_GET_CLASS(self);
+    if (klass->eject) {
+	return (klass->eject)(self);
+    } else {
+	return TRUE;
+    }
+}
+
+gboolean
 device_directtcp_supported(
     Device *self)
 {
